添加作者信息

--- a/src/main/resources/form.properties
+++ b/src/main/resources/form.properties
@@ -1,6 +1,7 @@
 #
 # Created by JFormDesigner on Thu Aug 06 16:49:22 CST 2020
 #
+MainFrame.authorButton.text=\u4F5C\u8005
 MainFrame.setSaveFilePaht.text=\u6D4F\u89C8
 MainFrame.printButton.text=\u6253\u5370
 MainFrame.setFilePaht.text=\u6D4F\u89C8
